removed unnecessary part of code
