# Esercizio01AlbumApi/src/main/resources/openapi.album.yaml
@@ -43,12 +43,6 @@ paths:
       description: Elimina un album Addio amico 🫡
       operationId: deleteAlbum
       parameters:
-        - name: api_key
-          in: header
-          description: ''
-          required: false
-          schema:
-            type: string
         - name: idAlbum
           in: path
           description: Id dell'album da eliminare
